# ScrappyGameEngine

./: .gitignore  CMakeLists.txt  README.md
include/: Scrappy.h
src/Scrappy/: Application.cpp  Application.h  Clock.cpp  Clock.h  Core.cpp  Core.h  EntryPoint.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Logger.cpp  Logger.h  SFMLInput.cpp  SFMLInput.h  SFMLWindow.cpp  SFMLWindow.h  Window.h
src/Scrappy/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
src/Scrappy/layers/: ImGuiLayer.cpp  ImGuiLayer.h
